2002-03-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (parse_options): Parse exclude-optional and
	  include-optional.
	* client-src/client_util.h (option_t): New exclude_optional and
	  include_optional field.
	* man/amanda.8.in: Document optional.
	* server-src/amadmin.c (disklist_one): Display optional.
	* server-src/conffile.c: Parse optional keyword.
	* server-src/conffile.h (dumptype_t): New exclude_optional and
	  include_optional field.
	* server-src/diskfile.c (read_diskline): Copy optional bits.
	* server-src/diskfile.c (optionstr): Print optional bits.
	* server-src/diskfile.h (disk_t): New exclude_optional and
	  include_optional field.
	* server-src/planner.c (getsize): Use new sendsize format if optional
	  bits are used.

2002-03-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (dump_to_tape): Call start_degraded_mode() if
	  taper failed.

2002-03-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c (extract_files_setup): Add ^$ to host.

2002-03-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch from Michael Frankowski <mfrankow@winternet.com>

	* client-src/sendbackup-gnutar.c: Test for subdir before dbprintf.

2002-03-12  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (init_options): New function.
	* client-src/client_util.h (init_options): Prototype.
	* client-src/sendsize.c (main): Use init_options.

2002-03-12  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client-util.c: Check for include and exclude files.

2002-03-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Fix.
	* server-src/conffile.c(get-compress): Change message for bad 
	  compress argument.

2002-03-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Fix.
	* client-src/client_util.c (parse_options): Parse auth= option.