@@ -1,5 +1,10 @@
 2002-03-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
+	* client-src/client_util.c (parse_options): Do not check if the
+	  exclude file exist, it's done later.
+
+2002-03-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
 	* client-src/client_util.c (parse_options): Parse exclude-optional and
 	  include-optional.
 	* client-src/client_util.h (option_t): New exclude_optional and
